feat: add plans
